--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,7 +18,9 @@ foreach(TEST grid)# z1qx1n_bs1)
 endforeach()
 
 
-# This test has a second Fortran file in it
-add_executable(test_hntr test_hntr.cpp Z1QX1N.BS1.F help_hntr.F90)
-target_link_libraries(test_hntr ${ALL_LIBS} gfortran)   # Linking in gfortran is GCC-only
-add_test(AllTests test_hntr)
+if (BUILD_MODELE)
+  # This test has a second Fortran file in it
+  add_executable(test_hntr test_hntr.cpp Z1QX1N.BS1.F help_hntr.F90)
+  target_link_libraries(test_hntr ${ALL_LIBS} gfortran)   # Linking in gfortran is GCC-only
+  add_test(AllTests test_hntr)
+endif()
